# ADKApplications

./: .gitignore  README.md  pyproject.toml
.maintenance/: rebuild_venv.sh
.serena/: project.yml
.serena/memories/project/: architecture.md
hello_world/: agent.py
jptranscript_app/: .env  225 桜と野球の話.html  AGENTS.md  GEMINI.md  README.md  __init__.py  agent.py  ai-first-company.html  implementation.md  sample.txt  workflow.py
jptranscript_app/.agents/skills/jptranscript-furigana/: SKILL.md
jptranscript_app/.agents/skills/jptranscript-furigana-refinement/: SKILL.md
jptranscript_app/Output/: 224学校の変化の話.html  39 ホワイトデーの話.html  43 お返し文化について.html  44 \たこ焼きの話.html  57 日本の結婚式.html  btoa-ai-agent-business.html  ガラスのショーケース.html  ミロク情報サービス.html  日本のＺ世代のスラング.html  漢字の絵を使った日本語.html  皆-さ-ん-は-絵-を-描-く-の.html  自転車と歩道.html
jptranscript_app/prompts/: furigana_review.md  glossary.md  optimization.md  paragraph.md  tool_caller.md
jptranscript_app/scratch/: clean.py
jptranscript_app/templates/: default_style.css
jptranscript_app/tests/: __init__.py  test_beautifier_tools.py  test_furigana_tools.py  test_html_converter.py  test_text_processing.py  test_workflow.py
jptranscript_app/tools/: __init__.py  beautifier_tools.py  furigana_tools.py  html_converter.py  text_processing.py
yttranscript_app/: AGENT.md  README.md  agent.py  implementation.md  workflow.py
yttranscript_app/Output/: ai-agent-design-patterns.html
yttranscript_app/prompts/: structure_transcript.md
yttranscript_app/tests/: __init__.py  test_tools.py  test_workflow.py
yttranscript_app/tools/: __init__.py  html_renderer.py  job_state.py  ollama_client.py  shadowing_html.py  transcript_structure.py  validate_shadowing_html.py  validate_transcript_integrity.py  youtube_transcript.py
(+25 files in other folders)
